RbA Build/src/objects/Service_Product__c.object
<CustomObject>
    <description>Junction Object linking Master Products to Service Products</description>
    <fields>
        <fullName>Master_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Master_Legacy_Product__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service Products</relationshipLabel>
        <relationshipName>Service_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Name_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Set by workflow to ensure we&apos;re not adding the same product to the same master product</description>
        <label>Record Name Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Master Products</relationshipLabel>
        <relationshipName>Service_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service_Product__c</columns>
        <columns>Master_Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPA-{000000}</displayFormat>
        <label>Service Product Assignment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>